fix(incidents): MA-614 Fix responsible selector overflow style

--- a/incidents/src/main/resources/public/sass/global/components/incidents/_lightbox.scss
+++ b/incidents/src/main/resources/public/sass/global/components/incidents/_lightbox.scss
@@ -67,7 +67,7 @@
       }
     }
 
-    &-responsible-autocomplete {
+    &-responsible {
       label {
         overflow: inherit;
       }
